--- a/index.html
+++ b/index.html
@@ -1305,34 +1305,34 @@
             <div class="row g-5 align-items-center">
                 <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="testimonial-img">
-                        <img class="img-fluid animated pulse infinite" src="img/testimonial-1.jpg" alt="">
-                        <img class="img-fluid animated pulse infinite" src="img/testimonial-2.jpg" alt="">
-                        <img class="img-fluid animated pulse infinite" src="img/testimonial-3.jpg" alt="">
-                        <img class="img-fluid animated pulse infinite" src="img/testimonial-4.jpg" alt="">
+                        <img class="img-fluid animated pulse infinite" src="img/bnac/people1.png" alt="">
+                        <img class="img-fluid animated pulse infinite" src="img/bnac/people1.png" alt="">
+                        <img class="img-fluid animated pulse infinite" src="img/bnac/people4.png" alt="">
+                        <img class="img-fluid animated pulse infinite" src="img/bnac/people4.png" alt="">
                     </div>
                 </div>
                 <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="owl-carousel testimonial-carousel">
                         <div class="testimonial-item">
-                            <img class="img-fluid mb-3" src="img/testimonial-1.jpg" alt="">
+                            <img class="img-fluid mb-3" src="img/bnac/people4.png" alt="">
                             <p class="fs-5">Ordered online and got it delivered fast. Neat packing. Fresh and latest stock was sent. Very happy. Have been getting their chikkis for over a decade. But first time tried online and very pleased. Thank you</p>
                             <h5>Dhivya Srikanth</h5>
                             <span class="text-primary">Profession</span>
                         </div>
                         <div class="testimonial-item">
-                            <img class="img-fluid mb-3" src="img/testimonial-2.jpg" alt="">
+                            <img class="img-fluid mb-3" src="img/bnac/people1.png" alt="">
                             <p class="fs-5">Very pleased with the service!! The snacks I ordered online were fresh, crispy and delicious.</p>
                             <h5>Andrea Alexander</h5>
                             <span class="text-primary">Profession</span>
                         </div>
                         <div class="testimonial-item">
-                            <img class="img-fluid mb-3" src="img/testimonial-3.jpg" alt="">
+                            <img class="img-fluid mb-3" src="img/bnac/people3.png" alt="">
                             <p class="fs-5">I am from Bangalore, tried your savouries. They were super fresh, crispy and tasty. Thanks.</p>
                             <h5>Hariharan C</h5>
                             <span class="text-primary">Profession</span>
                         </div>
                         <div class="testimonial-item">
-                            <img class="img-fluid mb-3" src="img/testimonial-4.jpg" alt="">
+                            <img class="img-fluid mb-3" src="img/bnac/people1.png" alt="">
                             <p class="fs-5">Excellent products and very very cheap too.. no compromise on taste at all.. well done Bharath snacks!!</p>
                             <h5>Niloufer Dsouza</h5>
                             <span class="text-primary">Profession</span>
