--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                   <a href="product.html" class="nav-link">Products</a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle pe-3" role="button" id="pages" data-bs-toggle="dropdown" aria-expanded="false">Exports</a>
+                  <a class="nav-link dropdown-toggle pe-3" role="button" id="pages" data-bs-toggle="dropdown" aria-expanded="false">Bulk Order</a>
                   <ul class="dropdown-menu border-0 p-3 rounded-0 shadow" aria-labelledby="pages">
                     <li><a href="index.html" class="dropdown-item">About Us</a></li>
                     <li><a href="index.html" class="dropdown-item">Shop</a></li>
