About Parallax updae

--- a/about.html
+++ b/about.html
@@ -363,14 +363,14 @@
 
 
     <!-- Banner Start -->
-    <div class="container-fluid banner my-5 py-5" data-parallax="scroll" data-image-src="img/w1.png">
-        <div class="container py-5">
+    <div class="container-fluid banner my-5 py-5" data-parallax="scroll" data-image-src="img/bnac/j5.gif">
+        <div class="container py-5" style="visibility: hidden;">
             <div class="row g-5">
                 <div class="col-lg-12 text-center">
-                    <h1 class="text-white mb-4 wow fadeIn" data-wow-delay="0.3s" style="font-size: 3rem; font-weight: bold;">
+                    <h1 class="text-white mb-4" data-wow-delay="0.3s" style="font-size: 3rem; font-weight: bold;">
                         "Delivering Delicious Snacks & Sweets to Every Corner of the World!"
                     </h1>
-                    <a class="btn btn-secondary rounded-pill py-3 px-5 wow fadeIn" data-wow-delay="0.5s" href="">
+                    <a class="btn btn-secondary rounded-pill py-3 px-5" data-wow-delay="0.5s" href="">
                         Explore Our Range
                     </a>
                 </div>
