--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&family=Open+Sans:wght@400;500;600&display=swap" rel="stylesheet">   
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
@@ -117,7 +121,9 @@
                 <a href="index.html" class="navbar-brand d-flex align-items-center">
                   <!-- <img src="img/bnac/logo.png" alt="Logo" class="me-2 logo-img" style="height:50px; width: auto;"> -->
                   <img src="img/logo.gif" alt="Logo" class="me-2 logo-img">
-                  <!-- <h2 class="m-2" style="color: rgb(147, 1, 1);">BHARATH SNACKS</h2> -->
+                  <!-- <h2 class="m-2" style="color: rgb(147, 1, 1); font-family: 'Poppins', serif; -->
+                  <!-- font-weight: 700;
+                  font-style: normal;">BHARATH SNACKS</h2> -->
                 </a>
               </div>
             </div>
@@ -1469,6 +1475,13 @@
           quantityElement.innerText = newQuantity;
         }
       }
+
+      document.querySelectorAll('.product-item').forEach(function(card) {
+            card.addEventListener('click', function() {
+                window.location.href = 'product_details2.html';
+            });
+        });
+
     </script>
 
     <script>
