--- a/product.html
+++ b/product.html
@@ -641,6 +641,12 @@
     <script src="lib/lightbox/js/lightbox.min.js"></script>
 
     <script>
+        document.querySelectorAll('.product-item').forEach(function(card) {
+            card.addEventListener('click', function() {
+                window.location.href = 'product_details2.html';
+            });
+        });
+
         document.querySelectorAll('.category-btn').forEach(button => {
             button.addEventListener('click', () => {
                 const category = button.getAttribute('data-category'); // Get category from button's data attribute
