--- a/product.html
+++ b/product.html
@@ -537,8 +537,8 @@
     </style>
 
     <!-- Product Ends -->
-
-    <div class="container-fluid banner my-5 py-5" data-parallax="scroll" data-image-src="img/bnac/green.png">
+    <img src="img/bnac/green.png" width="100%" >
+    <!-- <div class="container-fluid banner my-5 py-5" data-parallax="scroll" data-image-src="img/bnac/green.png">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-12 text-center">
@@ -551,12 +551,12 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
      
 
 
-    <div class="container-fluid bg-dark footer mt-5 py-3 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid bg-dark footer py-3 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-3">
             <div class="row g-3 align-items-center">
                 <!-- Logo Column: Adjusted to move left -->
