--- a/product_details2.html
+++ b/product_details2.html
@@ -529,6 +529,7 @@
                         <i class="far fa-heart"></i>
                     </button>
                     <button class="add-to-cart">
+                    
                         <span>
                         <svg width="22" height="20" xmlns="http://www.w3.org/2000/svg">
                             <path
@@ -538,7 +539,9 @@
                             />
                         </svg>
                         </span>
-                        <span><a href="service.html" style="color: white;">Add to cart</a></span>
+                        <span>
+                            <a href="service.html" style="color: white;">Add to cart</a>
+                        </span>
                     </button>
                 </div>
             </div>
