header text font

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
         <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="w-100" src="images/EZCrave2.png" alt="Image" height="600px">
+                    <img class="w-100" src="img/bnac/Red.png" alt="Image" height="600px">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-start">
